# logforge

./: .env.example  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_create_users_and_projects.py
docker/: app.Dockerfile  clickhouse.init.sql
src/: main.py
src/api/: dependencies.py
src/api/v1/: analytics.py  auth.py  ingest.py  projects.py  users.py
src/core/: __init__.py  config.py  security.py
src/database/: clickhouse.py  postgres.py
src/models/: __init__.py  clickhouse_models.py  postgres_models.py
src/repositories/: base.py  log.py  project.py  user.py
src/schemas/: __init__.py  log.py  project.py  user.py
src/services/: analytics_service.py  auth_service.py
tests/: conftest.py
tests/integration/: conftest.py  test_auth.py  test_ingest.py
tests/unit/: test_security.py
